--- a/auth/package.json
+++ b/auth/package.json
@@ -16,6 +16,7 @@
     "@types/express": "^4.17.13",
     "@types/jest": "^27.0.3",
     "@types/luxon": "^2.0.8",
+    "@types/sinon": "^10.0.6",
     "@types/uuid": "^8.3.3",
     "jest": "^27.4.5",
     "sinon": "^12.0.1",
