--- a/auth/package.json
+++ b/auth/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "devDependencies": {
     "@databases/pg-schema-cli": "^4.2.0",
+    "@pact-foundation/pact": "^9.17.1",
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.0.3",
