--- a/auth/docker-compose.yml
+++ b/auth/docker-compose.yml
@@ -19,5 +19,12 @@ services:
       - 5000:5000
   db:
     image: ajohnston1219/db:dev
+    build:
+      context: ../db
+      dockerfile: Dockerfile.dev
+      args:
+        PG_PASSWORD: postgres
+        ADMIN_PASSWORD: spacecraft
+        APP_PASSWORD: spacecraft
     ports:
       - 5432:5432
